# OfficeAgentEnv

./: .env.example  Dockerfile  MINIBLOG.md  README.md  inference.py  openenv.yaml  ppo_training_officeagent.ipynb  pyproject.toml  requirements-training.txt  requirements.txt  train_officeagent_colab.ipynb  train_officeagent_enron_rl_submission.ipynb
env/: __init__.py  calendar_data.py  email_data.py  environment.py  models.py
graders/: __init__.py  scoring.py  task_easy.py  task_hard.py  task_medium.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
trained_model/: config.json  generation_config.json  save_status.json  tokenizer_config.json
